[package]
name = "bankster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["cargo"] }
csv = "1.1.6"
rust_decimal = { version = "1.25.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.25.0"
serde = { version = "1.0.142", features = ["derive"] }
